# routerkeygenPC

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  NEWS  README  README.md  build_linux.sh  build_mac.sh  build_win.sh  routerkeygen_version.json
cli/: routerkeygen-cli.cpp  routerkeygen-cli.pro
debian/: copyright
doc/: routerkeygen.1
lang/: CMakeLists.txt  routerkeygen_es.ts  routerkeygen_nl.ts  routerkeygen_pt_PT.ts
nsis/: CMakeLists.txt  installer.nsi
resources/: Arris Group OUI ID.txt  cyta_bases.txt  resources.qrc
share/: MacOSXBundleInfo.plist.in  routerkeygen.desktop  routerkeygen.entitlements
src/: CMakeLists.txt  KeygenThread.cpp  RouterKeygen.cpp  RouterKeygen.h  WirelessMatcher.cpp  main.cpp
src/algorithms/: AliceGermanyKeygen.cpp  AliceItalyKeygen.cpp  AndaredKeygen.cpp  ArcadyanKeygen.cpp  ArcadyanKeygen.h  ArnetPirelliKeygen.cpp  ArnetPirelliKeygen.h  AxtelKeygen.cpp  BaseXKeygen.cpp  BaseXKeygen.h  BelkinKeygen.cpp  BelkinKeygen.h  BssidKeygen.cpp  BssidKeygen.h  CabovisaoSagemKeygen.cpp  ComtrendKeygen.cpp  ComtrendKeygen.h  ConnKeygen.cpp  DiscusKeygen.cpp  DlinkKeygen.cpp  EijsinkKeygen.cpp  EijsinkKeygen.h  EircomKeygen.cpp  GontwifiKeygen.cpp  GontwifiKeygen.h  HG824xKeygen.cpp  HG824xKeygen.h  HuaweiKeygen.cpp  InfostradaKeygen.cpp  InterCableKeygen.cpp  Keygen.h  MeoPirelliKeygen.cpp  MeoPirelliKeygen.h  OnoKeygen.cpp  OteBAUDKeygen.cpp  OteHuaweiKeygen.cpp  OteKeygen.cpp  PBSKeygen.cpp  PirelliKeygen.cpp  PldtKeygen.cpp  (+27 more)
src/dialog/: AboutDialog.cpp  UpdateDialog.cpp  UpdateDialog.h  WelcomeDialog.cpp  WelcomeDialog.h
src/forms/: UpdateDialog.ui  aboutdialog.ui  routerkeygen.ui
src/qcmdlineparser/: qcmdlineargument.cpp  qcmdlineargument.h  qcmdlineparser.cpp  qcmdlineparser.h
src/wifi/: QWifiManager.cpp  QWifiManager.h  QWifiManagerPrivate.cpp  QWifiManagerPrivate.h  QWifiManagerPrivateMac.cpp  QWifiManagerPrivateMac.h  QWifiManagerPrivateUnix.cpp  QWifiManagerPrivateUnix.h  QWifiManagerPrivateWin.cpp  QWifiManagerPrivateWin.h
test/: .gitignore  AlgorithmsTest.cpp  test.pro
